--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "taskName": "Sass Compile",
+            "label": "Sass Compile",
             "type": "shell",
             "command": "node-sass sass/main.scss css/main.css",
             "group": "build"
